# Multi_Version_Project_Arch

./: .gitignore  CMakePresets.json  package-lock.json  stm32f103c8_blue_pill.cfg
bsp/: README.md
bsp/board/: board_config_template.h  board_devices_template.c
bsp/hal_wrapper/: adc_hal.c  adc_hal.h  adc_hal_dma.c  adc_hal_private.h  exti_hal.c  exti_hal.h  gpio_hal.c  gpio_hal.h  hal_common.c  hal_common.h  hal_features.h  hal_status.h  i2c_hal.h  i2c_hal_hw.c  i2c_hal_soft.c  spi_hal.h  spi_hal_hw.c  spi_hal_private.h  timer_hal.c  timer_hal.h  usart_hal.c  usart_hal.h  usart_hal_dma.c  usart_hal_private.h
bsp/irq_handlers/: irq_handlers.c
bsp/linker_scripts/: STM32F103XX_FLASH.ld
bsp/mcs51/hal/: hal_common.c  i2c_hal_soft.c  mcs51_memory.h  timer_hal.c  usart_hal.c
bsp/mcs51/hal_wrapper/: debug_uart.h  gpio_hal.c  gpio_hal.h  hal_common.c  hal_common.h  hal_features.h  hal_status.h  i2c_hal.h  i2c_hal_soft.c  mcs51_hal_types.h  timer_hal.h  usart_hal.c  usart_hal.h
bsp/stm32/hal/: adc_hal.c  adc_hal_dma.c  adc_hal_private.h  exti_hal.c  gpio_hal.c  hal_common.c  i2c_hal_hw.c  i2c_hal_soft.c  spi_hal_dma.c  spi_hal_hw.c  spi_hal_private.h  spi_hal_soft.c  stm32f1_hal_map.c  stm32f1_hal_map.h  timer_hal.c  usart_hal.c  usart_hal_private.h
bsp/stm32/irq_handlers/: irq_handlers.c
bsp/stm32/linker_scripts/: STM32F103XX_FLASH.ld
bsp/stm32/startup/: startup_stm32f103xb.s
bsp/stm32/syscalls/: syscalls.c
bsp/syscalls/: syscalls.c
cmake/: driver_catalog.cmake  hal_options.cmake  project_template.cmake  stm32-gcc-toolchain.cmake
common/app_framework/: app_fsm.c  app_fsm.h
common/device_manager/: devmgr.c  devmgr.h  driver_registry_gcc.c  driver_registry_static.c
common/driver_core/: driver_core.h  driver_features.h
common/interfaces/: actuator_if.h  analog_probe_if.h  bp_if.h  comm_if.h  display_font.c  display_font.h  display_if.h  distance_if.h  gas_if.h  gnss_if.h  health_if.h  imu_if.h  input_if.h  key_service.h  misc_if.h  pressure_if.h  radio_if.h  rfid_if.h  rtc_if.h  segment_if.h  sensor_if.h  stepper_if.h  weight_if.h
common/irq_event/: irq_event.c  irq_event.h
common/scheduler/: sched_loop.c  sched_loop.h  scheduler.c  scheduler.h
common/utils/: cJSON.c  cJSON.h  cJSON_config.h  cjson_port.c  cjson_port.h  comm_port.c  comm_port.h  debug_log.h  debug_uart.c  debug_uart.h  mem_pool.c  mem_pool.h  soft_uart.c  soft_uart.h  tiny_printf.c  tiny_printf.h
docs/: architecture.md  maintenance_guide.md  project_status.md  upper_ui_guide.md
drivers/actuators/: light_channel.c  relay.c  sg90.c  stepmotor.c
drivers/comm/: a7670c_sms.c  a7670c_sms.h  esp8266_mqtt.c  esp8266_mqtt.h  esp8266_port.h  esp8266_wifi.c  jdy31_ble.c  l76k_gnss.c  nrf24l01.c  su03t_voice.c
drivers/config/: driver_configs.h
drivers/displays/: hc595_seg.c  ili9341.c  lcd_color_spi.c  lcd_color_spi.h  oled_font.c  oled_font.h  oled_ssd1306.c  oled_ssd1306_mcs51.c  st7789.c
drivers/misc/: buzzer.c  key.c  key.h  key_4ch.c  key_poll.c  led.c
drivers/sensors/: adc0832.c  adc0832.h  bmp180.c  co2_uart.c  dht11.c  ds1302_rtc.c  ds18b20.c  ds18b20_mcs51.c  e18_presence.c  gl5506_light.c  hcsr04.c  hx711.c  ir_clothes.c  max30102.c  mpu6050.c  mq135.c  mq2_smoke.c  mq4_methane.c  mq7_co.c  mq_adc0832.c  msp20_bp.c  ph_sensor.c  pm25.c  rfid_rc522.c  water_level.c
hal_wrapper/: adc_hal.h  exti_hal.h  gpio_hal.h  hal_common.h  hal_features.h  hal_platform_types.h  i2c_hal.h  spi_hal.h  timer_hal.h  usart_hal.h
projects/DCLD_001/: CMakeLists.txt  CMakePresets.json  PRODUCT_SPEC.md  readme.txt
projects/DCLD_001/DCLD_001_upper_ui/: capacitor.config.json  index.html  package-lock.json  package.json  version_features.json  vite.config.js
projects/DCLD_001/DCLD_001_upper_ui_flutter/: pubspec.yaml  version_features.json
projects/DCLD_001/app/: app_callbacks.c  app_logic.c  app_logic.h  app_main.c  board_config.h  stm32f10x_conf.h  version_config.h
projects/DCLD_001/board/: board_config.h  board_devices.c
projects/FJXT_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/FJXT_001/FJXT_001_upper_ui_flutter/: README.md  pubspec.yaml  version_features.json
projects/FJXT_001/app/: app_callbacks.c  app_logic.c  app_logic.h  app_main.c  stm32f10x_conf.h  version_config.h
projects/FJXT_001/board/: board_config.h  board_devices.c
projects/KQZL3/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt  华为云.md
projects/KQZL3/KQZL3_upper_ui/: capacitor.config.json  index.html  package-lock.json  (+2 more)
projects/RTJK_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/RTJK_001/app/: app_callbacks.c  app_logic.c  app_logic.h  app_main.c  board_config.h  stm32f10x_conf.h  version_config.h
projects/RTJK_001/board/: board_config.h  board_devices.c
projects/SMZL_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/WXCS_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/ZHJG_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/ZHJS_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/ZNCZ_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/ZNLYJ_001/: CMakeLists.txt  PRODUCT_SPEC.md  readme.txt
projects/driver_all_test/: CMakeLists.txt
tools/: apply_cjson_trim.py  check_project_arch.sh  export_project.py  export_project_gui.py  flash_zncz_001.ps1  gen_oled_font.py  gen_project.py  gen_project_gui.py  gui_common.py  insert_cjson_guards.py  openocd_pre_flash.tcl  project_run_gui.py
tools/cmake/: hal_export_utils.cmake  resolve_driver_catalog.cmake  resolve_export.cmake  resolve_hal_sources.cmake
(+279 files in other folders)
